+Fixed Subtitle Spacing, FINALLY

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -433,7 +433,7 @@ li {
 
 .subtitle {
   padding: 0.2vh;
-  margin-bottom: 5%;
+  margin-bottom: 1%;
   color: $cWhite;
 }
 
